--- a/trunk/clientv2/js/client/templates/alpha-factor.tmpl.html
+++ b/trunk/clientv2/js/client/templates/alpha-factor.tmpl.html
@@ -1,7 +1,7 @@
 <span class="factor" data-bind="createFactor, css: { 'odd': ($index() % 2 == 0) }">
 	<span class="label">
 		<span data-bind="text: name"></span>
-		<img data-bind="tooltip: id" src="img/info.jpg" alt="" width="11" height="11" />
+		<img data-bind="tooltip: id" src="img/info.png" alt="" />
 	</span>
     <span>
         <span data-bind="text: minLabel" class="left-label"></span>
