--- a/trunk/clientv2/js/client/templates/login-bar.tmpl.html
+++ b/trunk/clientv2/js/client/templates/login-bar.tmpl.html
@@ -8,13 +8,16 @@
 	
 	<div class="login-bar" data-bind="css: {'premium': (premiumUser() ==  true)}">		
 		<span class="stock-facts">StockFacts <i>Premium</i></span>
-		<span class="logged-in-as">Logged in as <span data-bind="text: premiumUserEmail"></span></span>
+		<span class="logged-in-as" data-bind="css: {'hide': (libLoggedIn() == true)}">Logged in as <span data-bind="text: premiumUserEmail"></span></span>
+		<span class="trial-period" data-bind="css: {'hide': (libTrialPeriod() == true)}">: You have <span data-bind="text: currentDay"></span> days left in your trial.</span>
+		<span class="trial-expired" data-bind="css: {'hide': (libTrialExpired() == true)}">: Your trial has expired.</span>
 		<ul>
-			<li><a data-bind="siteLink: { id: 'account-settings'}">Account</a></li>
-			<li><a data-bind="siteLink: { id: 'alerts'}">Alerts</a></li>
+			<li class="subscribe" data-bind="css: {'hide': (libSubscribe() == true)}"><a data-bind="siteLink: { id: 'premium'}">Subscribe</a></li>
+			<li class="account"><a data-bind="siteLink: { id: 'account-settings'}">Account</a></li>
+			<li class="alerts" data-bind="css: {'hide': (libAlerts() == true)}"><a data-bind="siteLink: { id: 'alerts'}">Alerts</a></li>
 			<li class="last"><a data-bind="siteLink: { id: 'logout'} ">Sign Out</a></li>
 		</ul>
-		<div class="right">
+		<div class="right" data-bind="css: {'hide': (libCurrency() == true)}">
 			<span class="currency">Currency</span>
 			<select>
 				<option>Singapore (SGD)</option>
