--- a/trunk/clientv2/js/client/templates/company-header.tmpl.html
+++ b/trunk/clientv2/js/client/templates/company-header.tmpl.html
@@ -26,9 +26,9 @@
 		<div class="profile-bar">		
 			<a data-bind="siteLink: { id: 'index', extra: 'code=' + ticker } " class="back">Back to StockFacts</a>
 			<div class="right">
-				<a data-bind="siteLink: { id: 'index', extra: 'code=' + ticker } " class="view">View Retail Brokers</a>
+				<a data-bind="siteLink: { id: 'trade', extra: 'code=' + ticker } " class="view">View Retail Brokers</a>
 				<a data-bind="siteLink: { id: 'alerts', extra: 'code=' + ticker } " class="add">Add to Watchlist</a>
-				<a data-bind="siteLink: { id: 'print', extra: 'code=' + ticker } " class="down-print">Download/Print</a>
+				<a class="down-print print-button">Download/Print</a>
 			</div>
 			<!--<a data-bind="siteLink: { id: 'trade', extra: 'code=' + ticker } ">Trade</a>-->
 		</div>
