--- a/trunk/clientv2/css/style.css
+++ b/trunk/clientv2/css/style.css
@@ -858,7 +858,7 @@ background: url("../img/title-back.png");
   height: 30px;
   position: absolute;
   right: -33px;
-  top: 0px;
+  top: 0;
 }
 > .button-dropdown:hover .trigger {
   background: url("../img/sprite-dropdown.png") no-repeat 0 -59px;
@@ -917,8 +917,8 @@ background: url("../img/title-back.png");
   width: 337px;
 }
 
-.custom-select select { background: transparent; width: 227px; font-size: 10px; font-weight: bold; border: 1px solid #fff; border-radius: 4px; height: 21px; -webkit-appearance: none; }
-.custom-select { width: 200px; height: 21px; overflow: hidden; background: url(../img/bg-select-arrow.png) no-repeat right #ddd; border: 2px solid #d4d4d4; border-radius: 4px; }
+.custom-select select { background: transparent; width: 227px; font-size: 10px; font-weight: bold; border: 1px solid #fff; border-radius: 4px; height: 21px; -webkit-appearance: none; text-indent: 5px; }
+.custom-select { width: 200px; height: 21px; margin: 0 auto; overflow: hidden; background: url(../img/bg-select-arrow.png) no-repeat right #ddd; border: 2px solid #d4d4d4; border-radius: 4px; }
 .custom-select select option { background: #f3f3f3; border-bottom: 2px solid #fff; font-weight: normal !important; }
 
 /** alpha factors */
