--- a/clientv2/css/alerts.css
+++ b/clientv2/css/alerts.css
@@ -13,10 +13,24 @@
 .watchlist .companies ul li .change { width: 69px; color: #b5cf34; }
 .watchlist .companies ul li .change.negative { color: #bf0052; }
 
+.watchlist .search .description .screener-basic { margin-bottom: 8px; }
+.watchlist .search .searchtoggle { margin: 0; }
+.watchlist .search .searchtoggle .toggle { display: inline-block; margin: 0px; padding-left: 15px;  padding-right: 15px; background-color: #565a5c; }
+.watchlist .search .searchtoggle .toggle.sname { -webkit-border-bottom-right-radius: 0; -moz-border-radius-bottomright: 0; border-bottom-right-radius: 0; -webkit-border-top-right-radius: 0; -moz-border-radius-topright: 0; border-top-right-radius: 0; }
+.watchlist .search .searchtoggle .toggle.scode { -webkit-border-bottom-left-radius: 0; -moz-border-radius-bottomleft: 0; border-bottom-left-radius: 0; -webkit-border-top-left-radius: 0; -moz-border-radius-topleft: 0; border-top-left-radius: 0; }
+.watchlist .search .searchtoggle .selected { background-color: #1e2171; }
+.watchlist .search .searchbar { margin: 10px 0; border: 1px solid #1e2171; display: inline-block; -webkit-border-radius: 4px; border-radius: 4px; height: 22px; position: relative; width: 212px; background: #fff; -webkit-background-clip: padding; -moz-background-clip: padding; background-clip: padding-box; }
+.watchlist .search .searchbar input { border: none; padding: 0px; color: #494949; font: normal 12px Arial, Helvetica, sans-serif; font-style: italic; width: 186px; height: 22px; text-indent: 10px; background: none; }
+.watchlist .search .search-submit { position: absolute; top: 0px; right: 0px; width: 26px !important; height: 0; padding-top: 22px; background: #1e2171 url("../img/searchbar-icon.jpg") no-repeat center center !important; z-index: 20; cursor: pointer; }
 
 .watchlist .companies ul li .remove { background: url(../img/x-button.png) no-repeat; height: 16px; width: 16px; }
 .watchlist .companies ul li .company { font-size: 12px !important; font-weight: normal !important;}
 
+.watchlist .results h5 { padding: 5px; margin: 15px 0 8px 0; font-size: 14px; font-weight: normal; background: #ebecec; text-transform: uppercase; }
+.watchlist .results ul { margin: 0; padding: 0; font-size: 12px; font-weight: bold; }
+.watchlist .results ul li { list-style-type: none; margin-bottom: 8px; line-height: 17px; }
+.watchlist .results ul li .add { background: url(../img/add-button.png) no-repeat; height: 17px; width: 17px; display: inline-block; margin: 0 6px 0 0; }
+.watchlist .results ul li .name { font-size: 13px; display: inline-block; position: relative; top: -3px; }
 
 .alerts { display: inline-block; width: 60%; }
 .alerts .price-changes, .alerts .estimates, .alerts .developments { background: #ebecec; }
@@ -24,3 +38,5 @@
 .alerts ul { padding: 17px 10px; margin: 0; }
 .alerts ul li { list-style-type: none; margin: 0 0 12px 0; }
 .alerts ul li input[type="text"] { width: 32px; height: 22px; border: 1px solid #c4c4c4; border-radius: 4px; }
+
+.button-wrapper { margin: 35px 0 0 10px; }
