--- a/trunk/clientv2/css/technical-charting.css
+++ b/trunk/clientv2/css/technical-charting.css
@@ -1,32 +1,28 @@
-body {
-  font-family: verdana, Arial, Helvetica, Sans-serif;
-  font-size: 12px; }
-
 .clearfix:after {
   content: "";
   display: table;
   clear: both; }
 
-div.wrapper {
+/*div.wrapper {
   width: 1000px;
   margin: 0 auto;
-  padding: 0 2px; }
+  padding: 0 2px; }*/
 
 .technical-charting {
   border-right: 1px solid #cacdd3;
   border-left: 1px solid #cacdd3;
   border-bottom: 1px solid #cacdd3;
-  padding-bottom: 100px; }
+  padding-bottom: 50px; }
   .technical-charting a {
     text-decoration: none; }
   .technical-charting ul {
     padding: 8px 0;
     margin: 0; }
-  .technical-charting ul li {
+  .technical-charting .header-bar li {
     list-style: none;
     display: inline-block;
     margin-left: 8px; }
-    .technical-charting ul li:first-child {
+    .technical-charting .header-bar li:first-child {
       margin-left: 0;
       padding-right: 10px;
       border-right: 2px solid #fff; }
@@ -60,7 +56,7 @@ div.wrapper {
   float: left; }
   .technical-charting .control-box .title-bar {
     background: #0b236b;
-    padding: 6px 0 6px 0;
+    padding: 8px 0;
     padding-left: 12px;
     border-left: 4px solid #bed61f;
     position: relative; }
@@ -77,7 +73,7 @@ div.wrapper {
     left: 0px;
     display: none; }
   .technical-charting .control-box .arrow-space {
-    top: 16px; }
+    top: 16px !important; }
   .technical-charting .control-box .control-wrapper {
     padding: 8px 10px 10px 12px;
     border-left: 4px solid #bed61f; }
@@ -98,3 +94,134 @@ div.wrapper {
   display: inline-block;
   width: 72.5%;
   height: 400px; }
+
+.indicators, .financials {
+  display: none; }
+
+.technical-charting .financials-controls {
+  text-align: left;
+  margin-bottom: 20px; }
+
+.icons {
+  position: absolute;
+  top: 6px;
+  right: 10px; }
+
+.icons-space {
+  top: 14px; }
+
+.icon {
+  display: block;
+  height: 17px;
+  width: 17px;
+  display: inline-block; }
+
+.info-icon {
+  background: url(css/../images/info.png) no-repeat; }
+
+.plus-icon {
+  background: url(css/../images/plus.png) no-repeat; }
+
+.minus-icon {
+  background: url(css/../images/minus.png) no-repeat; }
+
+.grayout {
+  position: absolute;
+  z-index: 50;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  filter: alpha(opacity=80);
+  -moz-opacity: 0.8;
+  opacity: 0.8;
+  background-color: #fff; }
+
+.modal {
+  display: none;
+  position: absolute;
+  z-index: 100;
+  width: 675px;
+  top: 45%;
+  left: 18%;
+  border: 4px solid #cfcfd0;
+  border-radius: 4px;
+  color: #3d3d3d; }
+  .modal h1 {
+    margin:0;
+    font-size: 16px; }
+  .modal ul {
+    padding: 0; }
+  .modal li {
+    width: 10px;
+    height: 10px;
+    background: #acadae;
+    border-radius: 50%;
+    list-style: none;
+    display: inline-block; }
+    .modal li.current {
+      background: #868788; }
+  .modal .position-indicator {
+    padding-top: 25px; }
+
+.modal-content {
+  padding: 20px;
+  padding-bottom: 40px;
+  position: relative;
+  background: #fff; }
+  .modal-content p {
+    margin: 0; }
+  .modal-content .close {
+    position: absolute;
+    cursor: pointer;
+    top: 4px;
+    right: 4px;
+    background: #9c9e9f;
+    color: #fff;
+    padding: 0px 5px 1px 5px;
+    border-radius: 2px; }
+
+.modal-controls {
+  position: relative;
+  background-color: #cfcfd0;
+  text-align: center;
+  height: 60px; }
+  .modal-controls .control-left {
+    position: absolute;
+    cursor: pointer;
+    top: 18px;
+    width: 20px;
+    height: 20px;
+    left: 4px;
+    border-radius: 50%;
+    background: white; }
+    .modal-controls .control-left .control-icon {
+      position: absolute;
+      top: 5px;
+      right: -3px;
+      width: 18px;
+      height: 18px;
+      background: url(css/../images/left.png) no-repeat; }
+  .modal-controls .control-right {
+    position: absolute;
+    cursor: pointer;
+    top: 18px;
+    width: 20px;
+    height: 20px;
+    right: 4px;
+    border-radius: 50%;
+    background: white; }
+    .modal-controls .control-right .control-icon {
+      position: absolute;
+      top: 5px;
+      right: -6px;
+      width: 18px;
+      height: 18px;
+      background: url(css/../images/right.png) no-repeat; }
+
+.technical-charting-alternative {
+  display: none; }
+  .technical-charting-alternative .content {
+    padding: 20px;
+    padding-bottom: 100px;
+    border: 1px solid #cacdd3; }
